--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -481,3 +481,4 @@
 <!--&lt;!&ndash; * * * * * * * * * * End of Placeholder * * * * * * * * * * * &ndash;&gt;-->
 <!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
 
+<app-sign-up></app-sign-up>
