--- a/src/app/component/management/menu/menu.component.html
+++ b/src/app/component/management/menu/menu.component.html
@@ -3,7 +3,7 @@
   <nav>
     <ul>
       <li><a class="dropdown-toggle"><i class="fas fa-industry"></i><span class="toggle-text">Quản lý công trình</span></a>
-        <ul class="dropdown-menu" >
+        <ul class="dropdown-menu">
           <li><a routerLink="/construction-management">Thông tin chung</a></li>
           <li><a href="#">Thông tin quản lý</a></li>
           <li><a href="#">Hồ sơ công trình</a></li>
@@ -19,7 +19,8 @@
           <li><a href="#">Dropdown item 3</a></li>
         </ul>
       </li>
-      <li><a href="#" class="dropdown-toggle"><i class="fas fa-users"></i><span class="toggle-text">Quản lý nhân sự</span></a>
+      <li><a href="#" class="dropdown-toggle"><i class="fas fa-users"></i><span
+        class="toggle-text">Quản lý nhân sự</span></a>
         <ul class="dropdown-menu">
           <li><a href="#" class="toggle-text">Dropdown item 1</a></li>
           <li><a href="#" class="toggle-text">Dropdown item 2</a></li>
