--- a/src/app/component/management/main/main.component.html
+++ b/src/app/component/management/main/main.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-<div class="body-qlct">
-  <app-menu></app-menu>
-</div>
+<body>
+  <app-header></app-header>
+  <div class="body-qlct">
+    <app-menu></app-menu>
+    <app-general-information></app-general-information>
+  </div>
+</body>
