--- a/src/app/component/management/header/header.component.html
+++ b/src/app/component/management/header/header.component.html
@@ -10,6 +10,7 @@
     <div class="title-qlct-2"><p style="cursor: pointer">Thông báo nội bộ</p></div>
     <div class="title-qlct-3"><p style="cursor: pointer">Tin tức hoạt động</p></div>
   </div>
+  <button type="button" class="btn btn-primary">Primary</button>
   <div class="ava-qlct">
     <div class="map">
       <div class="map-icon">
