--- a/src/app/component/management/construction/general-information/general-information.component.html
+++ b/src/app/component/management/construction/general-information/general-information.component.html
@@ -591,19 +591,17 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Cảnh báo</h5>
-        <button type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
       <div class="modal-body">
         <p>Bạn chắc chắn xóa không?</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" (click)="acceptDeleteCT()">Xóa</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" id="closeBtn-delete-1" class="btn btn-secondary" (click)="closeModal($event.target)" data-dismiss="modal" >Close</button>
       </div>
     </div>
   </div>
 </div>
+
 
 
